# dockerman

./: .flake8  .gitignore  LICENSE  README.md  do  doot.py  install.sh  pyproject.toml  setup.cfg
dockerman/: __init__.py  datatypes.py  dockerman.py
docs/: complex_dootfile_example.md  complex_example.py
doot/: __init__.py  color.py  doot.py
t/: test_doscript.py  test_tasks.py
