[project]
name = "doot"
description = "Simple zero dependency task runner"
version = "2.0.0a1"
requires-python = ">= 3.8"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["task", "runner"]
authors = [
  {name = "Adam Olsen", email = "arolsen@gmail.com"},
]

[project.optional-dependencies]
test = ["pyright"]

[project.urls]
Homepage = "https://github.com/synic/doot"
Repository = "https://github.com/synic/doot"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
