[project]
name = "doot"
description = "Simple zero dependency task runner"
version = "1.0.0a4"
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["task", "runner", "automation", "build", "cli"]
authors = [
  {name = "Adam Olsen", email = "arolsen@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = [ "pyright>=1.1.0" ]
dev = [ "black>=23.0.0" ]

[project.urls]
Homepage = "https://github.com/synic/doot"
Repository = "https://github.com/synic/doot"
Documentation = "https://github.com/synic/doot#readme"
"Bug Tracker" = "https://github.com/synic/doot/issues"
Changelog = "https://github.com/synic/doot/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py38"]
