[metadata]
name = dockerman
version = 0.0.1
author = Adam Olsen
author_email = arolsen@gmail.com
description = 'Docker management utility'
url = https://github.com/synic/dockerman
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.extras_require]
development =
    black

